[gd_scene load_steps=16 format=3 uid="uid://yurb8hkbfrqx"]

[ext_resource type="LabelSettings" uid="uid://cmklqdckfbc4w" path="res://ui/fonts/default_label.tres" id="1_jhv8j"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_khvsa"]
[ext_resource type="Theme" uid="uid://bvd320abptk56" path="res://ui/theme/main_menu.tres" id="2_bwcyu"]
[ext_resource type="Texture2D" uid="uid://dwcub5w00br6" path="res://assets/art/tilemap_everything.png" id="2_inxeq"]
[ext_resource type="FontFile" uid="uid://dv3et1t5m7y6o" path="res://font/Joe Rabbit_demo.otf" id="3_qdtjv"]
[ext_resource type="AudioStream" uid="uid://d08c477wla5kk" path="res://assets/music/MÃºsicaMenu.wav" id="3_uddyu"]
[ext_resource type="LabelSettings" uid="uid://bn8xodfb2212o" path="res://ui/fonts/title_label.tres" id="4_27p2b"]
[ext_resource type="FontFile" uid="uid://b0g2umar3f2kr" path="res://font/Choco Shake.otf" id="6_bp036"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_to55f"]
texture = ExtResource("2_inxeq")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0

[sub_resource type="TileSet" id="TileSet_82rhc"]
sources/0 = SubResource("TileSetAtlasSource_to55f")

[sub_resource type="Theme" id="Theme_ijm2j"]
default_font = ExtResource("3_qdtjv")

[sub_resource type="LabelSettings" id="LabelSettings_53o4l"]
font = ExtResource("6_bp036")
font_size = 12

[sub_resource type="Animation" id="Animation_o7bel"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/TransitionScreen:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ylsmi"]
resource_name = "begin"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/TransitionScreen:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_game"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -30.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ffmxl"]
_data = {
"RESET": SubResource("Animation_o7bel"),
"begin": SubResource("Animation_ylsmi")
}

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_khvsa")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_82rhc")
format = 2
layer_0/tile_data = PackedInt32Array(262151, 851968, 9, 327687, 851968, 10, 393223, 786432, 268435462, 458759, 851968, 12, 524295, 720896, 268435463, 262152, 655360, 9, 327688, 655360, 10, 393224, 655360, 11, 458760, 655360, 12, 524296, 720896, 9, 262153, 720896, 9, 327689, 720896, 10, 393225, 720896, 11, 458761, 720896, 12, 524297, 786432, 9, 262154, 786432, 9, 327690, 786432, 10, 393226, 786432, 11, 458762, 786432, 12, 524298, 851968, 9, 262155, 851968, 9, 327691, 851968, 10, 393227, 851968, 11, 458763, 851968, 12, 524299, 720896, 9, 327693, 720896, 10, 393229, 196608, 8, 458765, 196608, 9, 524301, 196608, 10, 589837, 196608, 11, 327694, 786432, 10, 393230, 262144, 8, 327695, 851968, 10, 393231, 327680, 8, 327696, 655360, 10, 393232, 393216, 8, 327697, 720896, 10, 393233, 458752, 8, 0, 655360, 9, 65536, 655360, 10, 131072, 655360, 11, 196608, 655360, 12, 1, 851968, 4, 65537, 327680, 5, 131073, 327680, 6, 196609, 327680, 7, 2, 786432, 9, 65538, 393216, 5, 131074, 393216, 6, 196610, 393216, 7, 3, 851968, 9, 65539, 458752, 5, 131075, 458752, 6, 196611, 458752, 7, 4, 655360, 9, 65540, 524288, 5, 131076, 655360, 11, 196612, 655360, 12, 5, 720896, 9, 65541, 589824, 5, 131077, 720896, 11, 196613, 720896, 12, 6, 786432, 9, 65542, 786432, 10, 131078, 786432, 11, 196614, 786432, 12, 7, 458752, 1, 65543, 458752, 2, 131079, 458752, 3, 196615, 458752, 4, 8, 524288, 1, 65544, 524288, 2, 131080, 524288, 3, 196616, 524288, 4, 9, 720896, 9, 65545, 720896, 10, 131081, 720896, 11, 196617, 720896, 12, 10, 786432, 9, 65546, 786432, 10, 131082, 524288, 7, 196618, 786432, 12, 11, 851968, 9, 65547, 786432, 268435463, 131083, 851968, 11, 196619, 851968, 12, 12, 655360, 9, 65548, 262144, 14, 131084, 655360, 11, 196620, 655360, 12, 13, 720896, 9, 65549, 327680, 14, 131085, 851968, 268435460, 196621, 720896, 12, 14, 786432, 9, 65550, 786432, 10, 131086, 786432, 11, 196622, 786432, 12, 15, 851968, 9, 65551, 720896, 1, 131087, 720896, 2, 196623, 720896, 3, 16, 655360, 9, 65552, 786432, 1, 131088, 786432, 2, 196624, 786432, 3, 17, 720896, 9, 65553, 524288, 5, 131089, 720896, 11, 196625, 720896, 12, 18, 786432, 9, 65554, 589824, 5, 131090, 786432, 11, 196626, 786432, 12, 19, 851968, 9, 65555, 851968, 10, 131091, 524288, 268435463, 196627, 851968, 12, 262144, 655360, 9, 327680, 524288, 5, 393216, 655360, 11, 458752, 655360, 12, 262145, 655360, 7, 327681, 589824, 5, 393217, 720896, 11, 458753, 524288, 268435463, 262146, 786432, 9, 327682, 786432, 10, 393218, 327680, 0, 458754, 327680, 1, 262147, 851968, 9, 327683, 851968, 10, 393219, 393216, 0, 458755, 393216, 1, 262148, 655360, 9, 327684, 655360, 268435463, 393220, 655360, 11, 458756, 655360, 12, 262149, 720896, 9, 327685, 720896, 10, 393221, 720896, 11, 458757, 720896, 12, 262150, 786432, 9, 327686, 786432, 10, 393222, 786432, 11, 458758, 786432, 12, 262156, 655360, 9, 327692, 655360, 10, 393228, 655360, 7, 458764, 655360, 12, 262157, 720896, 9, 262158, 786432, 9, 262159, 720896, 4, 262160, 786432, 4, 262161, 720896, 9, 262162, 786432, 9, 327698, 655360, 5, 393234, 851968, 12, 262163, 851968, 9, 327699, 851968, 10, 393235, 851968, 11, 524288, 655360, 268435461, 589824, 655360, 10, 655360, 655360, 11, 720896, 655360, 12, 524289, 720896, 9, 589825, 720896, 10, 655361, 720896, 11, 720897, 720896, 12, 524290, 327680, 2, 589826, 327680, 3, 655362, 327680, 4, 720898, 786432, 12, 524291, 393216, 2, 589827, 393216, 3, 655363, 393216, 4, 720899, 851968, 12, 524292, 655360, 9, 589828, 655360, 10, 655364, 655360, 11, 720900, 655360, 12, 524293, 655360, 7, 589829, 720896, 10, 655365, 524288, 5, 720901, 720896, 12, 524294, 786432, 9, 589830, 655360, 7, 655366, 589824, 5, 720902, 786432, 12, 589831, 655360, 10, 655367, 655360, 11, 720903, 655360, 12, 655373, 196608, 12, 720909, 851968, 12, 589834, 851968, 268435460, 655370, 851968, 11, 720906, 851968, 12, 589835, 720896, 10, 655371, 720896, 11, 720907, 720896, 12, 524300, 786432, 9, 589836, 786432, 7, 655372, 786432, 11, 720908, 786432, 12, 589832, 720896, 10, 655368, 720896, 11, 720904, 720896, 12, 589833, 524288, 7, 655369, 786432, 11, 720905, 786432, 12, 458766, 262144, 9, 524302, 262144, 10, 589838, 262144, 11, 655374, 262144, 12, 458767, 327680, 9, 524303, 327680, 10, 589839, 327680, 11, 655375, 327680, 12, 458768, 393216, 9, 524304, 393216, 10, 589840, 393216, 11, 655376, 393216, 12, 458769, 458752, 9, 524305, 458752, 10, 589841, 524288, 5, 655377, 458752, 12, 458770, 851968, 9, 524306, 851968, 10, 589842, 589824, 5, 655378, 851968, 12, 720910, 720896, 8, 720911, 720896, 8, 720912, 720896, 8, 720913, 720896, 8, 720914, 720896, 8, 720915, 720896, 8, 720916, 720896, 8, 458771, 720896, 8, 524307, 720896, 8, 589843, 720896, 8, 655379, 655360, 7)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -35.0
offset_right = 64.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
theme = SubResource("Theme_ijm2j")
theme_override_colors/font_outline_color = Color(0.403922, 0.498039, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 25
text = "Rabbit 
Defender"
label_settings = ExtResource("4_27p2b")
horizontal_alignment = 1

[node name="Game jam" type="Label" parent="CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -17.0
grow_horizontal = 2
grow_vertical = 0
text = "Beginner's Jam Summer 2024"
label_settings = ExtResource("1_jhv8j")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartGameButton" type="Button" parent="CanvasLayer"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = 37.0
offset_right = 35.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_bwcyu")
theme_override_colors/font_color = Color(0, 0, 0, 0)

[node name="Label" type="Label" parent="CanvasLayer/StartGameButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
theme = SubResource("Theme_ijm2j")
theme_override_colors/font_outline_color = Color(0.403922, 0.498039, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 10
text = "Start Game"
label_settings = SubResource("LabelSettings_53o4l")
horizontal_alignment = 1

[node name="TransitionScreen" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_uddyu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ffmxl")
}

[connection signal="pressed" from="CanvasLayer/StartGameButton" to="." method="_on_start_game_button_pressed"]
